--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "clipboard": "^2.0.4",
     "lodash": "^4.17.15",
     "postcss-import": "^12.0.1",
     "tailwindcss": "^1.1.2",
