--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
     "clipboard": "^2.0.4",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "postcss-import": "^12.0.1",
     "tailwindcss": "^1.1.2",
     "vue": "^2.6.10"
