--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:js": "npx browserify main.js -o bundle.js",
     "build:css": "postcss main.css -o bundle.css",
-    "build": "npm run build:js && npm run build:css"
+    "build": "npm run build:js && npm run build:css",
+    "watch": "git ls-files | grep -vxFf .onchangeignore | entr npm run build"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@tailwindcss/custom-forms": "^0.2.1",
+    "axios": "^0.19.0",
     "clipboard": "^2.0.4",
+    "dompurify": "^2.0.3",
     "lodash": "^4.17.15",
+    "marked": "^0.7.0",
     "moment": "^2.24.0",
     "postcss-import": "^12.0.1",
     "tailwindcss": "^1.1.2",
+    "tailwindcss-gap": "^3.1.1",
     "vue": "^2.6.10"
   },
   "browser": {
