--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss-import": "^12.0.1",
     "tailwindcss": "^1.1.2",
     "tailwindcss-gap": "^3.1.1",
+    "tailwindcss-transitions": "^2.1.0",
     "vue": "^2.6.10"
   },
   "browser": {
