--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "axios": "^0.19.0",
     "clipboard": "^2.0.4",
     "dompurify": "^2.0.3",
+    "flexsearch": "^0.6.30",
+    "fuse.js": "^3.4.5",
+    "gamma": "^1.0.0",
     "lodash": "^4.17.15",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
@@ -30,7 +33,10 @@
     "tailwindcss": "^1.1.2",
     "tailwindcss-gap": "^3.1.1",
     "tailwindcss-transitions": "^2.1.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-async-computed": "^3.7.0",
+    "vue-worker": "^1.2.1",
+    "webworkify": "^1.5.0"
   },
   "browser": {
     "vue": "vue/dist/vue.common.js"
