--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0"
+    "@vue/cli-service": "^3.11.0",
+    "webpack-cli": "^3.3.9"
   },
   "main": "index.js",
   "scripts": {
@@ -35,6 +36,8 @@
     "tailwindcss-transitions": "^2.1.0",
     "vue": "^2.6.10",
     "vue-async-computed": "^3.7.0",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10",
     "vue-worker": "^1.2.1",
     "webworkify": "^1.5.0"
   },
