--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@tailwindcss/custom-forms": "^0.2.1",
     "axios": "^0.19.0",
     "clipboard": "^2.0.4",
@@ -34,6 +35,7 @@
     "tailwindcss": "^1.1.2",
     "tailwindcss-gap": "^3.1.1",
     "tailwindcss-transitions": "^2.1.0",
+    "tinyify": "^2.5.1",
     "vue": "^2.6.10",
     "vue-async-computed": "^3.7.0",
     "vue-loader": "^15.7.1",
