--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "marked": "^0.7.0",
     "moment": "^2.24.0",
     "postcss-import": "^12.0.1",
+    "query-string": "^6.9.0",
+    "seedrandom": "^3.0.5",
     "tailwindcss": "^1.1.2",
     "tailwindcss-gap": "^3.1.1",
     "tailwindcss-transitions": "^2.1.0",
